--- a/bingo.html
+++ b/bingo.html
@@ -1,9 +1,10 @@
-<html>
+<html ng-app="JuegoBingo">
 <head>
     <title>Juego Bingo</title>
     <link href="estilos/estilos.css" type="text/css" rel="stylesheet">"
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 </head>
-<body>
+<body ng-controller="ControladorJuegoBingo">
     <button class="boton">
         Iniciar Juego
     </button>
